--- a/app/views/tables/show.html.erb
+++ b/app/views/tables/show.html.erb
@@ -1,4 +1,6 @@
-<%= @table.name %>
+<span class="badge rounded-pill text-bg-secondary fs-6 mb-2 mt-3">
+  <%= @table.product.name %> / <%= @table.name %>
+</span>
 
 <table class="table">
   <thead>
