add application css

--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<aside class="bg-body-tertiary h-100 pt-3">
+<aside class="bg-body-tertiary pt-3">
   <% products.each do |product| %>
     <h2 class="fs-5"><%= product.name %></h2>
 
