--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,19 +6,22 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_importmap_tags %>
   </head>
-  <body class="d-flex flex-column vh-100">
+  <body>
     <%= render 'header' %>
 
-    <div class="container-fluid flex-grow-1">
-      <div class="row h-100">
-        <div class="col-2">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-2 bg-body-tertiary">
           <%= render 'sidebar', products: @products %>
         </div>
 
         <div class="col-10">
-          <%= yield %>
+          <main>
+            <%= yield %>
+          </main>
         </div>
       </div>
     </div>
