--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-2 bg-body-tertiary">
+        <div class="col-2 p-0 bg-body-tertiary">
           <%= render 'sidebar', products: @products %>
         </div>
 
