--- a/app/views/tables/show.html.erb
+++ b/app/views/tables/show.html.erb
@@ -22,9 +22,7 @@
               <span class="badge text-bg-danger">PK</span>
             <% end %>
             <% if column.foreign_key_table.present? %>
-              <span class="badge text-bg-primary">
-                <%= link_to 'FK', column.foreign_key_table, class: 'link-light link-underline-opacity-0' %>
-              </span>
+              <%= link_to 'FK', column.foreign_key_table, class: 'link-light link-underline-opacity-0 badge text-bg-primary' %>
             <% end %>
           </td>
           <td><%= column.nullable? %></td>
