--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<aside class="bg-body-tertiary pt-3">
+<aside class="bg-body-tertiary">
   <% products.each do |product| %>
     <div class="accordion">
       <div class="accordion-item">
