--- a/app/views/tables/show.html.erb
+++ b/app/views/tables/show.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag 'table' do %>
+<%= turbo_frame_tag 'table', data: { turbo_action: 'advance' } do %>
   <span class="badge rounded-pill text-bg-secondary fs-6 mb-2 mt-3">
     <%= @table.product.name %> / <%= @table.name %>
   </span>
