--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,5 +1,7 @@
 <aside class="bg-body-tertiary">
-  <% products.each do |product| %>
+  <%= render 'search_form' %>
+
+  <% products_with_table.each do |product_with_table| %>
     <div class="accordion">
       <div class="accordion-item">
         <div class="accordion-header">
@@ -7,16 +9,16 @@
             class="accordion-button collapsed"
             type="button"
             data-bs-toggle="collapse"
-            data-bs-target="#accordion-<%= product.id %>"
+            data-bs-target="#accordion-<%= product_with_table.id %>"
             aria-expanded="false"
-            aria-controls="accordion-<%= product.id %>">
-            <%= product.name %>
+            aria-controls="accordion-<%= product_with_table.id %>">
+            <%= product_with_table.name %>
           </button>
         </div>
-        <div id="accordion-<%= product.id %>" class="accordion-collapse collapse bg-body-tertiary">
+        <div id="accordion-<%= product_with_table.id %>" class="accordion-collapse collapse bg-body-tertiary">
           <div class="accordion-body">
             <ul class="list-unstyled m-0">
-              <% product.tables.each do |table| %>
+              <% product_with_table.tables.each do |table| %>
                 <li class="text-truncate">
                   <%= link_to table.name, table, data: { turbo_frame: 'table', turbo_action: 'advance' }, class: 'link-dark link-underline-opacity-0 link-opacity-50-hover' %>
                 </li>
