--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-2 p-0 bg-body-tertiary">
-          <%= render 'sidebar', products: @products %>
+          <%= render 'sidebar', products_with_table: @products_with_table %>
         </div>
 
         <div class="col-10">
