--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-expand-lg bg-dark-subtle">
   <div class="container-fluid">
-    <%= link_to 'SchemaVisualizer', root_path, data: { turbo_frame: 'table', turbo_action: 'advance' }, class: 'navbar-brand' %>
+    <%= link_to 'SchemaVisualizer',
+                root_path,
+                data: { turbo_frame: 'table', turbo_action: 'advance' },
+                class: 'navbar-brand' %>
   </div>
 </nav>
