--- a/app/views/tables/show.html.erb
+++ b/app/views/tables/show.html.erb
@@ -27,7 +27,7 @@
                           class: 'link-light link-underline-opacity-0 badge text-bg-primary' %>
             <% end %>
           </td>
-          <td><%= column.nullable? %></td>
+          <td><%= display_nullable(column.nullable?) %></td>
           <td><%= column.comment %></td>
           <td><%= column.memo&.content %></td>
         </tr>
