--- a/app/views/tables/show.html.erb
+++ b/app/views/tables/show.html.erb
@@ -24,7 +24,9 @@
             <%= display_nullable(column.nullable?) %>
           </td>
           <td><%= column.comment %></td>
-          <td><%= column.memo&.content %></td>
+          <td>
+            <%= simple_format(column.memo&.content) %>
+          </td>
         </tr>
       <% end %>
     </tbody>
