add new or edit path helper

--- a/app/views/columns/_column.html.erb
+++ b/app/views/columns/_column.html.erb
@@ -9,6 +9,6 @@
   </td>
   <td><%= column.comment %></td>
   <td>
-    <%= render (column.memo || columm.bulid_memo) %>
+    <%= render (column.memo || column.build_memo) %>
   </td>
 </tr>
