add cancel link

--- a/app/views/column_memos/_form.html.erb
+++ b/app/views/column_memos/_form.html.erb
@@ -1,5 +1,9 @@
 <%= turbo_frame_tag column_memo do %>
   <%= form_with model: column_memo do |form| %>
     <%= form.text_area :content, class: 'form-control' %>
+
+    <%= form.submit '保存' %>
   <% end %>
+
+  <%= link_to 'キャンセル', column_memo %>
 <% end %>
