--- a/app/views/column_memos/_form.html.erb
+++ b/app/views/column_memos/_form.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag column_memo do %>
   <%= form_with model: column_memo do |form| %>
-    <%= form.text_area :content, class: 'form-control' %>
+    <%= form.text_area :content, rows: 8, class: 'form-control' %>
 
     <% if column_memo.errors.present? %>
       <div class="text-danger">
