--- a/app/views/column_memos/_column_memo.html.erb
+++ b/app/views/column_memos/_column_memo.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag column_memo do %>
-  <%= simple_format(column_memo.content) %>
+  <%= simple_format(column_memo.content) if column_memo.content.present? %>
 
   <%= link_to '編集', new_or_edit_column_memo_path(column_memo) %>
 <% end %>
