--- a/app/views/columns/_column.html.erb
+++ b/app/views/columns/_column.html.erb
@@ -2,13 +2,13 @@
   <td><%= column.name %></td>
   <td><%= column.type %></td>
   <td>
-    <%= render 'key', column: column %>
+    <%= render 'key', column: %>
   </td>
   <td class="text-center">
     <%= display_nullable(column.nullable?) %>
   </td>
   <td><%= column.comment %></td>
   <td>
-    <%= render (column.memo || column.build_memo) %>
+    <%= render column.memo || column.build_memo %>
   </td>
 </tr>
