--- a/app/views/column_memos/_form.html.erb
+++ b/app/views/column_memos/_form.html.erb
@@ -1,5 +1,5 @@
-<%= turbo_frame_tag column_memo do %>
-  <%= form_with model: column_memo do |form| %>
+<%= turbo_frame_tag column_memo.column do %>
+  <%= form_with model: column_memo, url: column_memo_path(column_memo.column), method: :patch do |form| %>
     <%= form.text_area :content, rows: 8, class: 'form-control' %>
 
     <% if column_memo.errors.present? %>
@@ -11,5 +11,5 @@
     <%= form.submit '保存' %>
   <% end %>
 
-  <%= link_to 'キャンセル', column_memo %>
+  <%= link_to 'キャンセル', column_memo_path(column_memo.column) %>
 <% end %>
