add flash partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,10 @@
         </div>
 
         <div class="col-10">
+          <div id="flash">
+            <%= render 'flash' %>
+          </div>
+
           <main>
             <%= yield %>
           </main>
