flashを画面下に表示する

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,15 +19,15 @@
         </div>
 
         <div class="col-10">
-          <div id="flash">
-            <%= render 'flash' %>
-          </div>
-
           <main>
             <%= yield %>
           </main>
         </div>
       </div>
+    </div>
+
+    <div id="flash" class="fixed-bottom">
+      <%= render 'flash' %>
     </div>
   </body>
 </html>
