change partial dir

--- a/app/views/columns/_column.html.erb
+++ b/app/views/columns/_column.html.erb
@@ -2,7 +2,7 @@
   <td><%= column.name %></td>
   <td><%= column.type %></td>
   <td>
-    <%= render 'key', column: %>
+    <%= render 'columns/key', column: %>
   </td>
   <td class="text-center">
     <%= display_nullable(column.nullable?) %>
