--- a/app/views/column_memos/_form.html.erb
+++ b/app/views/column_memos/_form.html.erb
@@ -8,8 +8,10 @@
       </div>
     <% end %>
 
-    <%= form.submit '保存' %>
-  <% end %>
+    <div class="d-flex justify-content-between align-items-center">
+      <%= form.submit '保存', class: 'btn btn-primary mt-1' %>
 
-  <%= link_to 'キャンセル', column_memo_path(column_memo.column) %>
+      <%= link_to 'キャンセル', column_memo_path(column_memo.column) %>
+    </div>
+  <% end %>
 <% end %>
