--- a/app/views/application/_search_form.html.erb
+++ b/app/views/application/_search_form.html.erb
@@ -1,3 +1,3 @@
-<%= form_with url: tables_path, method: :get, class: 'm-2', html: { data: { turbo_stream: true } } do |form| %>
+<%= form_with url: products_path, method: :get, class: 'm-2', html: { data: { turbo_stream: true } } do |form| %>
   <%= form.text_field :name, class: 'form-control', placeholder: 'Search' %>
 <% end %>
