--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,6 +1,7 @@
 <aside class="bg-body-tertiary">
   <%= render 'search_form' %>
-  <div id="products-with-table">
-    <%= render 'products_with_table', products_with_table: @products_with_table %>
-  </div>
+  <h2>Tables</h2>
+  <%= render 'products_with_table', products_with_table: @products_with_table %>
+  <h2>Columns</h2>
+  <%= render 'products_with_column', products_with_column: @products_with_column %>
 </aside>
