--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,7 +1,3 @@
 <aside class="bg-body-tertiary">
-  <%= render 'search_form' %>
-  <h2>Tables</h2>
-  <%= render 'products_with_table', products_with_table: @products_with_table %>
-  <h2>Columns</h2>
-  <%= render 'products_with_column', products_with_column: @products_with_column %>
+  <%= render 'products/products' %>
 </aside>
