カラム数のカウントを表示

--- a/app/views/products/_columns.html.erb
+++ b/app/views/products/_columns.html.erb
@@ -9,7 +9,7 @@
           data-bs-target="#accordion-column-<%= product_with_column.id %>"
           aria-expanded="false"
           aria-controls="accordion-column-<%= product_with_column.id %>">
-          <%= product_with_column.name %>
+          <%= product_with_column.name %> (<%= product_with_column.tables.map(&:columns).flatten.count %>)
         </button>
       </div>
       <div id="accordion-column-<%= product_with_column.id %>" class="accordion-collapse collapse bg-body-tertiary">
