--- a/app/views/products/_columns.html.erb
+++ b/app/views/products/_columns.html.erb
@@ -1,3 +1,4 @@
+<p class="fs-5 mb-0 ms-1">Columns</p>
 <% products_with_column.each do |product_with_column| %>
   <div class="accordion">
     <div class="accordion-item">
