--- a/app/views/products/_tables.html.erb
+++ b/app/views/products/_tables.html.erb
@@ -1,3 +1,4 @@
+<p class="fs-5 mb-0 ms-1">Tables</p>
 <% products_with_table.each do |product_with_table| %>
   <div class="accordion">
     <div class="accordion-item">
