--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -4,5 +4,8 @@
                 root_path,
                 data: { turbo_frame: 'table', turbo_action: 'advance' },
                 class: 'navbar-brand' %>
+    <%= link_to 'ユーザー一覧',
+                users_path,
+                class: 'nav-link' %>
   </div>
 </nav>
