--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_with model: user do |form| %>
   <div class="form-floating mb-3">
-    <%= form.text_field :name, class: 'form-control', id: "floatingName", placeholder: 'name' %>
-    <%= form.label :name, for: "floatingName" %>
+    <%= form.text_field :name, class: 'form-control', id: 'floatingName', placeholder: 'name' %>
+    <%= form.label :name, for: 'floatingName' %>
   </div>
   <div class="form-floating mb-3">
-    <%= form.text_field :email, class: 'form-control', id: "floatingEmail", placeholder: 'name@example.com' %>
-    <%= form.label :email, for: "floatingEmail" %>
+    <%= form.text_field :email, class: 'form-control', id: 'floatingEmail', placeholder: 'name@example.com' %>
+    <%= form.label :email, for: 'floatingEmail' %>
   </div>
-    <%= form.submit '保存', class: 'btn btn-primary w-100' %>
+  <%= form.submit '保存', class: 'btn btn-primary w-100' %>
 <% end %>
