--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="card">
     <div class="card-header">ユーザー修正</div>
     <div class="card-body">
-      <%= render "form", user: @user %>
+      <%= render 'form', user: @user %>
     </div>
   </div>
 </div>
