--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,7 +15,8 @@
         <td><%= user.email %></td>
         <td>
           <%= link_to '編集', edit_user_path(user), class: 'btn btn-primary' %>
-          <%= link_to '削除', user_path(user), class: 'btn btn-danger', data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
+          <%= link_to '削除', user_path(user), class: 'btn btn-danger',
+                                             data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
         </td>
       </tr>
     <% end %>
