--- a/app/views/column_memos/_form.html.erb
+++ b/app/views/column_memos/_form.html.erb
@@ -1,14 +1,20 @@
 <%= turbo_frame_tag column_memo.column do %>
-  <%= form_with model: column_memo, url: column_memo_path(column_memo.column), method: :patch do |form| %>
-    <%= form.text_area :content, rows: 4, class: 'form-control' %>
-    <% if column_memo.errors.present? %>
-      <div class="text-danger">
-        <%= column_memo.errors.full_messages.first %>
+  <%= form_with model: column_memo, url: column_memo_path(column_memo.column), method: :patch, class: 'row' do |form| %>
+    <div class="col-9">
+      <%= form.text_area :content, rows: 4, class: 'form-control' %>
+      <% if column_memo.errors.present? %>
+        <div class="text-danger">
+          <%= column_memo.errors.full_messages.first %>
+        </div>
+      <% end %>
+    </div>
+    <div class="col-3">
+      <div>
+        <%= form.submit '保存', class: 'btn btn-primary mt-1' %>
       </div>
-    <% end %>
-    <div class="d-flex justify-content-between align-items-center">
-      <%= form.submit '保存', class: 'btn btn-primary mt-1' %>
-      <%= link_to 'キャンセル', column_memo_path(column_memo.column) %>
+      <div>
+        <%= link_to 'キャンセル', column_memo_path(column_memo.column) %>
+      </div>
     </div>
   <% end %>
 <% end %>
