--- a/app/views/tables/show.html.erb
+++ b/app/views/tables/show.html.erb
@@ -8,11 +8,11 @@
       <div class="col-2">Type</div>
       <div class="col-1">Key</div>
       <div class="text-center col-1">Nullable</div>
-      <div class="col-3">Comment</div>
-      <div class="col-3">
+      <div class="col-2">Comment</div>
+      <div class="col-4">
         <div class="row">
           <div class="col-9">Memo</div>
-          <div class="col-3 text-center">Edit</div>
+          <div class="col-3">Edit</div>
         </div>
       </div>
     </div>
