--- a/app/views/column_memos/_column_memo.html.erb
+++ b/app/views/column_memos/_column_memo.html.erb
@@ -1,7 +1,7 @@
 <%= turbo_frame_tag column_memo.column do %>
   <div class="row">
     <div class="col-8">
-      <%= simple_format(column_memo.content) if column_memo.content.present? %>
+      <%= simple_format(column_memo.content, {}, wrapper_tag: "div") %>
     </div>
     <div class="col-4 text-center">
       <%= link_to '編集', edit_column_memo_path(column_memo.column) %>
