--- a/app/views/column_memos/_form.html.erb
+++ b/app/views/column_memos/_form.html.erb
@@ -8,7 +8,7 @@
         </div>
       <% end %>
     </div>
-    <div class="col-3">
+    <div class="col-3 text-center">
       <div>
         <%= form.submit '保存', class: 'btn btn-primary mt-1' %>
       </div>
