--- a/app/views/columns/_column.html.erb
+++ b/app/views/columns/_column.html.erb
@@ -1,4 +1,4 @@
-<div class="row border-bottom p-2">
+<div class="row border-bottom p-2 text-break">
   <div class="col-2"><%= column.name %></div>
   <div class="col-2"><%= column.type %></div>
   <div class="col-1">
