--- a/app/views/tables/show.html.erb
+++ b/app/views/tables/show.html.erb
@@ -3,7 +3,7 @@
     <%= @table.product.name %> / <%= @table.name %>
   </span>
   <div class="container-fluid">
-    <div class="row bg-light fw-bold border-bottom p-2">
+    <div class="row bg-light fw-bold border-bottom p-2 text-break">
       <div class="col-2">Name</div>
       <div class="col-2">Type</div>
       <div class="col-1">Key</div>
@@ -11,8 +11,8 @@
       <div class="col-2">Comment</div>
       <div class="col-4">
         <div class="row">
-          <div class="col-9">Memo</div>
-          <div class="col-3">Edit</div>
+          <div class="col-8">Memo</div>
+          <div class="col-4 text-center">Edit</div>
         </div>
       </div>
     </div>
