--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,4 +1,4 @@
 <aside class="bg-body-tertiary">
-  <%= render 'tables/tables', products_with_table: products_with_table %>
-  <%= render 'columns/columns', products_with_column: products_with_column %>
+  <%= render 'tables/tables', products_with_table: %>
+  <%= render 'columns/columns', products_with_column: %>
 </aside>
