--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,11 +1,24 @@
 <%= form_with model: user do |form| %>
-  <div class="form-floating mb-3">
-    <%= form.text_field :name, class: 'form-control', id: 'floatingName', placeholder: 'name' %>
-    <%= form.label :name, for: 'floatingName' %>
+  <% if user.errors.any? %>
+    <div class="alert alert-danger" role="alert">
+      <% user.errors.full_messages.each do |error| %>
+        <%= error %><br>
+      <% end %>
+    </div>
+  <% end %>
+  <div class="mb-3">
+    <%= form.label :name, class: 'form-label' %>
+    <%= form.text_field :name, class: 'form-control', placeholder: 'name' %>
   </div>
-  <div class="form-floating mb-3">
-    <%= form.text_field :email, class: 'form-control', id: 'floatingEmail', placeholder: 'name@example.com' %>
-    <%= form.label :email, for: 'floatingEmail' %>
+  <div class="mb-3">
+    <%= form.label :email, class: 'form-label' %>
+    <%= form.text_field :email, class: 'form-control', placeholder: 'name@example.com' %>
+  </div>
+  <div class="mb-3">
+    <%= form.label :is_admin, class: 'form-label' %>
+    <div class="form-check-inline">
+      <%= form.check_box :is_admin, class: 'form-check-input' %>
+    </div>
   </div>
   <%= form.submit '保存', class: 'btn btn-primary w-100' %>
 <% end %>
