--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,8 +1,8 @@
 <div class="w-50 mx-auto mt-3">
   <div class="card">
-    <div class="card-header">ユーザー編集</div>
+    <div class="card-header">プロダクト作成</div>
     <div class="card-body">
-      <%= render 'form', user: @user %>
+      <%= render 'form', product: @product %>
     </div>
   </div>
 </div>
